Попытался ускорить преобразование Фурье, почистил некоторые мелочи

--- a/ps5000a/PS5000ABlockCapture/PS5000ABlockCapture.csproj
+++ b/ps5000a/PS5000ABlockCapture/PS5000ABlockCapture.csproj
@@ -81,7 +81,7 @@
     <Compile Include="..\PS5000AImports.cs">
       <Link>PS5000AImports.cs</Link>
     </Compile>
-    <Compile Include="Class1.cs" />
+    <Compile Include="FurierTransformer.cs" />
     <Compile Include="PS5000ABlockForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -119,6 +119,10 @@
     <ProjectReference Include="..\..\Библиотека графики\Библиотека графики.csproj">
       <Project>{ce3c0ed7-208c-4043-89a9-19e93f1e2e46}</Project>
       <Name>Библиотека графики</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Классы\Классы %28библиотека%29.csproj">
+      <Project>{cd3eefde-74ed-48da-8e82-1e6abab1a140}</Project>
+      <Name>Классы %28библиотека%29</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
