Добавил класс со срезывающей функцией + форму для просмотра графика обычной функции

--- a/Библиотека графики/Библиотека графики.csproj
+++ b/Библиотека графики/Библиотека графики.csproj
@@ -54,6 +54,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="MostSimpleGrafic.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MostSimpleGrafic.Designer.cs">
+      <DependentUpon>MostSimpleGrafic.cs</DependentUpon>
+    </Compile>
     <Compile Include="PdfOpen.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,6 +88,9 @@
     </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MostSimpleGrafic.resx">
+      <DependentUpon>MostSimpleGrafic.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PdfOpen.resx">
       <DependentUpon>PdfOpen.cs</DependentUpon>
