Добавил установку пакетов R

--- a/Defect2019/Defect2019.csproj
+++ b/Defect2019/Defect2019.csproj
@@ -296,6 +296,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\InstallPackages.R" />
     <None Include="Resources\po with scuter.ico" />
   </ItemGroup>
   <ItemGroup>
