--- a/Библиотека графики/Библиотека графики.csproj
+++ b/Библиотека графики/Библиотека графики.csproj
@@ -54,6 +54,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="ManyDocumentsShower.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ManyDocumentsShower.Designer.cs">
+      <DependentUpon>ManyDocumentsShower.cs</DependentUpon>
+    </Compile>
     <Compile Include="MostSimpleGrafic.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -88,6 +94,9 @@
     </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ManyDocumentsShower.resx">
+      <DependentUpon>ManyDocumentsShower.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MostSimpleGrafic.resx">
       <DependentUpon>MostSimpleGrafic.cs</DependentUpon>
