Слегка изменил дизайн

--- a/ps5000a/PS5000ABlockCapture/PS5000ABlockCapture.csproj
+++ b/ps5000a/PS5000ABlockCapture/PS5000ABlockCapture.csproj
@@ -126,6 +126,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\algolIlusha.pdf" />
     <None Include="Resources\ВычисленияЗавершены.wav" />
   </ItemGroup>
   <ItemGroup>
