--- a/Defect2019/Defect2019.csproj
+++ b/Defect2019/Defect2019.csproj
@@ -83,10 +83,10 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <ApplicationDefinition Include="App.xaml">
+    <Page Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </ApplicationDefinition>
+    </Page>
     <Compile Include="3Duruz.cs">
       <SubType>Form</SubType>
     </Compile>
