Исправил баг, связанный с неправильной функцией Ханкеля

--- a/Defect2019/Defect2019.csproj
+++ b/Defect2019/Defect2019.csproj
@@ -338,5 +338,8 @@
   <ItemGroup>
     <None Include="Resources\ДанныеСуммируются.wav" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\СохранениеДанных.wav" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
