--- a/Defect2019/Defect2019.csproj
+++ b/Defect2019/Defect2019.csproj
@@ -258,6 +258,7 @@
     <Compile Include="Anima.Designer.cs">
       <DependentUpon>Anima.cs</DependentUpon>
     </Compile>
+    <Compile Include="EllipseParam.cs" />
     <Compile Include="Helper.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -275,6 +276,12 @@
     </Compile>
     <Compile Include="kGrafic.designer.cs">
       <DependentUpon>kGrafic.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Names.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Names.Designer.cs">
+      <DependentUpon>Names.cs</DependentUpon>
     </Compile>
     <Compile Include="OnePoint.cs">
       <SubType>Form</SubType>
@@ -385,6 +392,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="kGrafic.resx">
       <DependentUpon>kGrafic.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Names.resx">
+      <DependentUpon>Names.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="OnePoint.resx">
       <DependentUpon>OnePoint.cs</DependentUpon>
