--- a/Классы/Классы (библиотека).csproj
+++ b/Классы/Классы (библиотека).csproj
@@ -76,6 +76,7 @@
     <Compile Include="Matrix.cs" />
     <Compile Include="Memoize.cs" />
     <Compile Include="MultipleKnot.cs" />
+    <Compile Include="NetOnDouble.cs" />
     <Compile Include="Number.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="Point.cs" />
