Вчера забыл зафиксировать

--- a/Defect2019/Defect2019.csproj
+++ b/Defect2019/Defect2019.csproj
@@ -514,6 +514,12 @@
   <ItemGroup>
     <None Include="Resources\СоздаемЭллипсы.wav" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\КритическаяОшибка.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Поехали.wav" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
