--- a/Defect2019/Defect2019.csproj
+++ b/Defect2019/Defect2019.csproj
@@ -520,6 +520,9 @@
   <ItemGroup>
     <None Include="Resources\Поехали.wav" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ТестированиеОкончено.wav" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
