--- a/Defect2019/Defect2019.csproj
+++ b/Defect2019/Defect2019.csproj
@@ -539,6 +539,12 @@
   <ItemGroup>
     <None Include="Resources\roger.wav" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\gamestartup.mp3" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\gamestartup.wav" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
