--- a/Defect2019/Defect2019.csproj
+++ b/Defect2019/Defect2019.csproj
@@ -15,6 +15,9 @@
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -27,11 +30,8 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -472,7 +472,14 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\3Duruz.R" />
+    <None Include="Resources\3Duxt%28better%29.R" />
+    <None Include="Resources\3Duxt%28without pdf%29.R" />
+    <None Include="Resources\3Duxt.R" />
     <None Include="Resources\InstallPackages.R" />
+    <None Include="Resources\Magic3Dscript.R" />
+    <None Include="Resources\OnePoint.R" />
+    <None Include="Resources\OnlySurface.R" />
     <None Include="Resources\po with scuter.ico" />
   </ItemGroup>
   <ItemGroup>
@@ -494,6 +501,9 @@
     <Resource Include="Resources\8934.ico" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\ReDraw3Duxt2.R" />
+    <None Include="Resources\Truezlims.R" />
+    <None Include="Resources\WavesSurface.R" />
     <None Include="Resources\АнимацияГотова.wav" />
   </ItemGroup>
   <ItemGroup>
