--- a/Defect2019/Defect2019.csproj
+++ b/Defect2019/Defect2019.csproj
@@ -464,6 +464,10 @@
       <Project>{cd3eefde-74ed-48da-8e82-1e6abab1a140}</Project>
       <Name>Классы %28библиотека%29</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Консоль\Консоль %28тестирование%29.csproj">
+      <Project>{838570d2-db6a-4d32-8e69-f2fc0e11b316}</Project>
+      <Name>Консоль %28тестирование%29</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\3Duruz.R" />
