--- a/Defect2019/packages.config
+++ b/Defect2019/packages.config
@@ -1,15 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Accord" version="3.8.0" targetFramework="net461" />
-  <package id="Accord.Math" version="3.8.0" targetFramework="net461" />
+  <package id="Accord" version="3.8.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="Accord.Math" version="3.8.0" targetFramework="net461" requireReinstallation="true" />
   <package id="CommandLineParser" version="2.6.0" targetFramework="net461" />
   <package id="MathNet.Numerics" version="4.9.0" targetFramework="net472" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="2.9.6" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.Common" version="3.3.1" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="3.3.1" targetFramework="net461" />
   <package id="Microsoft.DotNet.PlatformAbstractions" version="3.0.0" targetFramework="net461" />
-  <package id="Microsoft.Win32.Registry" version="4.6.0" targetFramework="net461" />
-  <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
+  <package id="Microsoft.Win32.Registry" version="4.6.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.AppContext" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
@@ -24,24 +24,24 @@
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net461" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net461" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net461" />
-  <package id="System.Linq" version="4.3.0" targetFramework="net461" />
-  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Management" version="4.6.0" targetFramework="net461" />
   <package id="System.Memory" version="4.5.3" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
-  <package id="System.Reflection" version="4.3.0" targetFramework="net461" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Reflection.Emit" version="4.6.0" targetFramework="net461" />
   <package id="System.Reflection.Emit.Lightweight" version="4.6.0" targetFramework="net461" />
   <package id="System.Reflection.Metadata" version="1.7.0" targetFramework="net461" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
-  <package id="System.Runtime" version="4.3.1" targetFramework="net461" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net461" />
-  <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net461" />
-  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.AccessControl" version="4.6.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net461" />
