--- a/OptimisationTest/OptimisationTest.csproj
+++ b/OptimisationTest/OptimisationTest.csproj
@@ -57,12 +57,8 @@
     <None Include="Resources\TestBee.R" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Библиотека графики\Библиотека графики.csproj">
-      <Project>{ce3c0ed7-208c-4043-89a9-19e93f1e2e46}</Project>
-      <Name>Библиотека графики</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Классы\Классы %28библиотека%29.csproj">
-      <Project>{cd3eefde-74ed-48da-8e82-1e6abab1a140}</Project>
+    <ProjectReference Include="..\..\MathClasses\Классы\Классы %28библиотека%29.csproj">
+      <Project>{0178f934-a4a3-4a26-ae13-369fb421aa3d}</Project>
       <Name>Классы %28библиотека%29</Name>
     </ProjectReference>
     <ProjectReference Include="..\Консоль\Консоль %28тестирование%29.csproj">
