--- a/.gitattributes
+++ b/.gitattributes
@@ -61,3 +61,9 @@
 #*.PDF   diff=astextplain
 #*.rtf   diff=astextplain
 #*.RTF   diff=astextplain
+
+* linguist-vendored
+*.cs linguist-vendored=false
+*.fs linguist-vendored=false
+*.r linguist-vendored=false
+*.tex linguist-vendored=false
